FIX: on mobile post pages hidden arrows to switch post

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -913,8 +913,11 @@ button {
     right: 0;
     font-size: 46px;
 
-    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      display: none;
+    &.icn-item {
+
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        display: none;
+      }
     }
 
     .lightbox-post & {
